# ha-immich

./: .gitignore  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml  pyrightconfig.json  requirements.test.txt
.githooks/: commit-msg
.github/workflows/: create-dev-pr.yml  python_validate.yml  release.yml
custom_components/immich_extras/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  models.py  quality_scale.yaml  sensor.py  strings.json
docs/superpowers/plans/: 2026-07-22-immich-extras-path-to-publish.md
docs/superpowers/specs/: 2026-07-22-immich-extras-design.md
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_models.py  test_sensor.py  test_translations.py
